# nano-messenger

./: .gitignore  COMPILATION_FIXES.md  COMPILATION_FIXES_APPLIED.md  COMPILATION_FIXES_FINAL.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_FINAL_SUMMARY.md  COMPLETE_EXPLANATION.md  COMPREHENSIVE_FIX_SUMMARY.md  Cargo.toml  DELIMITER_FIX_SUMMARY.md  Dockerfile  EXECUTE_NOW.md  FINAL_COMPILATION_SUCCESS.md  FIX_README.sh  HONEST_ANSWER.md  IMMEDIATE_SOLUTION.md  LICENSE  MANUAL_FIX_GUIDE.md  Makefile  PROJECT_SUCCESS_SUMMARY.md  QUICKSTART.md  QUICK_FIX_FFMPEG.sh  README.md  RECOVERY_SOLUTION.md  SESSION1.md  SESSION10_COMPLETED.md  SESSION10_SUMMARY.md  SESSION11_COMPLETED.md  SESSION11_SUMMARY.md  SESSION12_COMPILATION_FIX_DOCUMENTATION.md  SESSION12_COMPLETED.md  SESSION13_COMPLETED.md  SESSION14_COMPLETED.md  SESSION15_COMPLETED.md  SESSION16_COMPLETED.md  SESSION16_PLAN.md  SESSION17_PLAN.md  SESSION19_COMPLETED.md  SESSION1_COMPLETED.md  SESSION2_COMPLETED.md  (+210 more)
config/: development.toml  production.toml  staging.toml  testing.toml
docs/: SESSION_11_TESTING.md  compliance-features.md  crypto-security.md  deployment-guide.md  performance-tuning.md
examples/: session10_validation.rs  session11_validation.rs  session12_basic_validation.rs  session12_validation.rs  session12_validation_fixed.rs  session1_validation.rs  session2_validation.rs  session3_validation.rs  session4_validation.rs  session5_validation.rs  session6_validation.rs  session7_validation.rs  session9_validation.rs  session_11_demo.rs  simple_session3_test.rs  test_crypto_fixes.rs
scripts/: deploy.sh
session19_backup_20250614_085735/src/: error.rs  protocol.rs  test_session_11.rs  test_session_12.rs
session19_backup_20250614_085735/src/crypto/: benchmarks.rs  hybrid.rs  optimizations.rs  traits.rs
session19_backup_20250614_085735/src/media/: mod.rs  session12_fixes.rs
session19_backup_20250614_090158/src/: test_compilation.rs
session19_backup_20250614_090158/src/crypto/: classical.rs  optimizations.rs  post_quantum.rs
session19_backup_20250614_090158/src/media/: metadata.rs  storage.rs  transfer.rs
session19_backup_20250614_090158/src/production/: audit_logging.rs
session19_backup_20250614_091058/src/: contacts.rs
session19_backup_20250614_091058/src/config/: adaptive.rs
session19_backup_20250614_091058/src/crypto/: mod.rs
session19_backup_20250614_091058/src/media/: encryption.rs
session19_backup_20250614_091058/src/production/: error_handling.rs
src/: crypto.rs  error.rs  inbox.rs  lib.rs  messages.rs  network.rs  protocol.rs  test_session_12.rs  username.rs
src/config/: adaptive.rs  mod.rs
src/crypto/: benchmarks.rs  config.rs  mod.rs  optimizations.rs  optimizations.rs.tmp  quantum_safe.rs
src/media/: deduplication.rs  encryption.rs
src/media/chunking/: integration_tests.rs
src/media/collaboration/: galleries.rs  mod.rs
src/production/: audit_logging.rs  config_validation.rs  error_handling.rs  health_monitoring.rs  migration_tools.rs  mod.rs
temp-certs/: staging.crt  staging.key
test_results/: session7_security_report.md
tests/: comprehensive_session_tests.rs  mod.rs  security_validation.rs  simplified_security.rs
tests/security/: attack_resistance.rs  crypto_correctness.rs  interoperability.rs  mod.rs  protocol_security.rs
(+25 files in other folders)
