[package]
name = "nano-messenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nano-client"
path = "src/bin/client.rs"

[[bin]]
name = "nano-relay"
path = "src/bin/relay.rs"

[dependencies]
# Crypto primitives - Updated for compatibility
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }  # Enable StaticSecret support
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"

# Serialization & encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# Async networking
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
