[package]
name = "nano-messenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nano-client"
path = "src/bin/client.rs"

[[bin]]
name = "nano-relay"
path = "src/bin/relay.rs"

[[bin]]
name = "config-validator"
path = "src/bin/config-validator.rs"

[[example]]
name = "session1_validation"
path = "examples/session1_validation.rs"

[[example]]
name = "session2_validation"
path = "examples/session2_validation.rs"

[[example]]
name = "session3_validation"
path = "examples/session3_validation.rs"

[[example]]
name = "session4_validation"
path = "examples/session4_validation.rs"

[[example]]
name = "simple_session3_test"
path = "examples/simple_session3_test.rs"

[[example]]
name = "test_crypto_fixes"
path = "examples/test_crypto_fixes.rs"

[[example]]
name = "session5_validation"
path = "examples/session5_validation.rs"

[[example]]
name = "session6_validation"
path = "examples/session6_validation.rs"

[[example]]
name = "session7_validation"
path = "examples/session7_validation.rs"

[dependencies]
# Classical crypto primitives - Updated for compatibility
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }  # Enable StaticSecret support and serde
ed25519-dalek = { version = "2.1", features = ["serde"] }  # Enable serde support
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"  # Explicit version to match x25519-dalek expectations
getrandom = "0.2"  # For generating random bytes directly

# Post-quantum cryptography - Session 2 additions (using simplified implementations)
# pqcrypto-kyber = "0.8"      # Would be used for real ML-KEM implementation
# pqcrypto-dilithium = "0.5"  # Would be used for real ML-DSA implementation
# pqcrypto-traits = "0.3"     # Would be used for real PQ crypto traits
# For Session 2 demo, we use simplified placeholder implementations

# Serialization & encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# Async networking
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Session 6: Performance optimization dependencies
lru = "0.12"

# Session 8: Configuration parsing
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
async-trait = "0.1"
